@@ -92,6 +92,7 @@ Internal:
 - New "b<item#>,<quantity>" NPC talk sequence, only useful to macro writers
   who use the 'talknpc' command. Buys <quantity> of <item#> (<item#> is the
   number shown in the 'store' list). Use after "b", e.g. "b b2,100".
+- Cleanup of redundant functions.pl $map_string variable.
 
 Credits:
 - Damokles: case sensitivity fix, avoidGM_namePattern.
